# AgentFactory

./: .env  .gitignore  LICENCE  README.md  app.py  main.py  pyproject.toml  style.css  test_api_key.py  workflow_blueprint
.papers/: AgentCoding.txt  BestPractices.txt  Documentation.txt
notebooks/: demo_script.py
src/agent_factory/: agent_adapter.py  architect.py  auditor.py  engineer.py  factory.py  qa_lead.py  trace_logger.py  utils.py
tests/: test_adk.py  test_adk_agents.py  test_architect.py  test_auditor.py  test_backend_rewrite.py  test_best_practices.py  test_engineer.py  test_factory.py  test_factory_parallel.py  test_qa.py
workspaces/a_children_s_book_workflow_creating_short_stories_/: agent.py
workspaces/a_natural_language_calculator/: agent.py
workspaces/build_a_weather_bot_following_best_practices/: agent.py
workspaces/build_a_weather_bot_that_can_tell_me_the_weather_i/: agent.py
workspaces/build_a_weather_bot_with_adk/: agent.py
